Update deps and move to php 7.4

--- a/templates/content/stats.html.twig
+++ b/templates/content/stats.html.twig
@@ -1,4 +1,4 @@
-{% extends 'layout.html.twig' %}
+{% extends 'base.html.twig' %}
 
 {% macro singleValue(title, value, unit) %}
     <div class="single-value">
