--- a/templates/santa/spoil.html.twig
+++ b/templates/santa/spoil.html.twig
@@ -1,6 +1,6 @@
 {% set spoilInProgress = true %}
 
-{% extends 'layout.html.twig' %}
+{% extends 'base.html.twig' %}
 
 {% block content %}
     <div class="content spoil-block">
