--- a/templates/santa/run.html.twig
+++ b/templates/santa/run.html.twig
@@ -1,4 +1,4 @@
-{% extends 'layout.html.twig' %}
+{% extends 'base.html.twig' %}
 
 {% set hasRestrictedUser = hasRestrictedUser|default(false) %}
 
