Remove extra CSP header overriding the one from the server

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,7 +26,7 @@
 
         {% if 'production' == bugsnag_release_stage and bugsnag_api_key is not empty %}
             <script src="{{ asset('js/bugsnag.min.js') }}"></script>
-            <script>
+            <script nonce="{{ csp_nonce('script') }}">
                 Bugsnag.start({
                     apiKey: '{{ bugsnag_api_key }}',
                     autoTrackSessions: false,
