--- a/templates/santa/run.html.twig
+++ b/templates/santa/run.html.twig
@@ -97,6 +97,11 @@
                                                 <span class="fas fa-paper-plane" aria-hidden="true"></span>
                                                 Finish and send Secret Santa messages!
                                             </button>
+
+                                            <button type="submit" class="big-button bellow" id="add-button" name="notesRedirect">
+                                                <span class="fas fa-user-edit" aria-hidden="true"></span>
+                                                Add notes for your participants before sending
+                                            </button>
                                         </div>
 
                                         <p class="is-center">
