Clarify privacy policy

--- a/templates/content/faq.html.twig
+++ b/templates/content/faq.html.twig
@@ -27,8 +27,19 @@
                         <p>
                             <strong>Detailled answer</strong>:
                             We receive only the data mandatory to start the Secret Santa:
-                            the list of users and usergroups in your organization. Once the private messages have been sent,
-                            we forget everything! In fact, we do not even have a database 😮
+                            the list of users and usergroups in your organization.
+                            Everything will be forgotten automatically after you finished the draw!
+                            In fact, we do not even have a database 😮
+                        </p>
+                    </li>
+                    <li id="data-retention">
+                        <h3>
+                            <a href="#data-retention">How long do you keep the collected data?</a>
+                        </h3>
+                        <p>
+                            This project do not use a database. Every data is stored only during
+                            the time of your session and will be deleted a few hours after you last
+                            interacted with the application.
                         </p>
                     </li>
                 </ul>
