Apply suggestions from code review
Co-authored-by: Damien Alexandre <dalexandre@jolicode.com>

--- a/templates/content/faq.html.twig
+++ b/templates/content/faq.html.twig
@@ -38,8 +38,8 @@
                         </h3>
                         <p>
                             This project do not use a database. Every data is stored only during
-                            the time of your session and will be deleted a few hours after you last
-                            interacted with the application.
+                            the time of your session and will be deleted a few hours after your last
+                            interaction with the application.
                         </p>
                     </li>
                 </ul>
