--- a/templates/content/privacy_policy.html.twig
+++ b/templates/content/privacy_policy.html.twig
@@ -28,13 +28,13 @@
             <p>
                 We only retain collected information for as long as necessary to provide you with
                 your requested service. The collected information will be automatically deleted a
-                few hours after you last interacted with our service. You will then not be able to
+                few hours after your last interaction with our service. You will then not be able to
                 access, nor request for modification or deletion of these information because
                 everything will be already deleted.
             </p>
 
             <p>
-                What data we store, we’ll protect within commercially acceptable means to prevent
+                For every data we collect, we’ll protect within commercially acceptable means to prevent
                 loss and theft, as well as unauthorised access, disclosure, copying, use or
                 modification.
             </p>
