--- a/templates/santa/run.html.twig
+++ b/templates/santa/run.html.twig
@@ -97,11 +97,12 @@
                                                 <span class="fas fa-paper-plane" aria-hidden="true"></span>
                                                 Finish and send Secret Santa messages!
                                             </button>
-
+                                            {% if false %}
                                             <button type="submit" class="big-button bellow" id="add-button" name="notesRedirect">
                                                 <span class="fas fa-user-edit" aria-hidden="true"></span>
                                                 Add notes for your participants before sending
                                             </button>
+                                            {% endif %}
                                         </div>
 
                                         <p class="is-center">
